[package]
authors = ["Kavin Gnanapandithan <kavin.balag@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "flysky_receiver"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"
rtic = {version = "2.0.1", features = [ "thumbv7-backend" ] }
rtic-monotonic = { version = "1.0", optional = true }
rtic-monotonics = { version = "1.0.0", features = ["cortex-m-systick"] }

rtic-sync = "1.0.2"
rtt-target = "0.4.0"
stm32f4xx-hal = {version = "0.19.0", features = [ "rt", "stm32f411" ] }
systick-monotonic = "1.0.1"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"


# this lets you use `cargo fix`!
[[bin]]
name = "flysky_receiver"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
